Fix overflow styling

--- a/src/App/App.css
+++ b/src/App/App.css
@@ -7,7 +7,7 @@
   background-image: url('../assets/cafe-img.jpeg');
   width: 100%;
   height: 100vh;
-  background-repeat: no-repeat;
+  background-repeat: repeat;
   background-size: cover;
   text-align: center;
 }
