--- a/src/Reservation/Reservation.css
+++ b/src/Reservation/Reservation.css
@@ -11,5 +11,5 @@
   background: #008080;
   color: white;
   width: 100%;
-  height: 3em;
+  padding: 1em;
 }
